--- a/index.html
+++ b/index.html
@@ -5,62 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
+      <a class="logo" href="">Web<span class="logo-header">Studio</span></a>
       <nav>
-        <ul class="list">
-          <li><a href="./index.html"></a>Студія</li>
-          <li><a href="./portfolio.html"></a>Портфоліо</li>
-          <li><a href=""></a>Контакти</li>
+        <ul class="nav-list list">
+          <li class="nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
+          <li class="nav-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li class="nav-item"><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="header-mail-link link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-phone-link link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button class="button">Замовити послугу</button>
+        <button type="button" class="order-button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Особливості</h2>
+      <section class="speciality">
+        <h2 class="speciality-title section-title">Особливості</h2>
         <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="speciality-sub-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="speciality-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="speciality-sub-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="speciality-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="speciality-sub-title">ПЛАНУВАННЯ</h3>
+            <p class="speciality-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="speciality-sub-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="speciality-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="activity">
+        <h2 class="activity-title section-title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img
@@ -89,7 +95,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="team-title section-title">Наша команда</h2>
         <ul class="list">
           <li>
             <img
@@ -98,8 +104,8 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member">Ігор Дем'яненко</h3>
+            <p lang="en" class="work-position">Product Designer</p>
           </li>
           <li>
             <img
@@ -108,8 +114,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member">Ольга Рєпіна</h3>
+            <p lang="en" class="work-position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -118,8 +124,8 @@
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-member">Микола Тарасов</h3>
+            <p lang="en" class="work-position">Marketing</p>
           </li>
           <li>
             <img
@@ -128,26 +134,26 @@
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member">Михайло Єрмаков</h3>
+            <p lang="en" class="work-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <address>
-        <a href="">WebStudio</a>
+        <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
         <ul class="list">
           <li>
             <a
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               target="_blank"
               rel="noopener noreferrer"
-              >м. Київ, пр-т Лесі Українки, 26</a
+              class="link address footer-link">м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link footer-mail-link footer-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link footer-phone-link footer-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
