--- a/portfolio.html
+++ b/portfolio.html
@@ -1,114 +1,120 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфоліо</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
+        <a class="logo" href="">Web<span class="logo-header">Studio</span></a>
         <nav>
-            <a href="">WebStudio</a>
-            <ul class="list">
-                <li><a href="./index.html"></a>Студія</li>
-                <li><a href="./portfolio.html"></a>Портфоліо</li>
-                <li><a href=""></a>Контакти</li>
+            <ul class="nav-list list">
+                <li class="nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+                <li class="nav-item"><a href="" class="nav-link link">Контакти</a></li>
             </ul>
         </nav>
         <ul class="list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-mail-link link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-phone-link link">+38 096 111 11 11</a></li>
         </ul>
-    </header>
+    </header>   
     <main>
         <ul class="list">
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+            <li><button type="button" class="filter-buttton">Усі</button></li>
+            <li><button type="button" class="filter-buttton">Веб-сайти</button></li>
+            <li><button type="button" class="filter-buttton">Додатки</button></li>
+            <li><button type="button" class="filter-buttton">Дизайн</button></li>
+            <li><button type="button" class="filter-buttton">Маркетинг</button></li>
         </ul>
-        <h2>Проєкти</h2>
+        <h2 class="section-title projects-title">Проєкти</h2>
         <ul class="list">
             <li>
                 <img src="./images/tech-crack.jpg" alt="веб-сайт"
               width="370"
               height="294">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="project-title">Технокряк</h3>
+                <p> class="project-type"Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/new-orlean.jpg" alt="баскетболісти"
               width="370"
               height="294">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                < class="project-type"p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/seafood.jpg" alt="логотип додатку"
               width="370"
               height="294">
-                <h3>Ресторан Seafood</h3>
-                <p>Додаток</p>
+                <h3 class="project-title">Ресторан <span lang="en">Seafood</span></h3>
+                <p class="project-type">Додаток</p>
             </li>
             <li>
                 <img src="./images/prime.jpg" alt="навушники"
               width="370"
               height="294">
-                <h3>Проєкт Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="project-title">Проєкт <span lang="en">Prime</span></h3>
+                <p>М class="project-type"аркетинг</p>
             </li>
             <li>
                 <img src="./images/boxes.jpg" alt="коробки"
               width="370"
               height="294">
-                <h3>Проєкт Boxes</h3>
-                <p>Додаток</p>
+                <h3 class="project-title">Проєкт <span lang="en">Boxes</span></h3>
+                <p class="project-type">Додаток</p>
             </li>
             <li>
                 <img src="./images/inspiration.jpg" alt="веб-сайт"
               width="370"
               height="294">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 lang="en" class="project-title">Inspiration has no Borders</h3>
+                <p> class="project-type"Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/limited-edition.jpg" alt="журнал"
               width="370"
               height="294">
-                <h3>Видання Limited Edition</h3>
-                <p>Дизайн</p>
+                <h3 class="project-title">Видання <span lang="en">Limited Edition</span></h3>
+                < class="project-type"p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/lab.jpg" alt="бірка"
               width="370"
               height="294">
-                <h3>Проєкт LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="project-title">Проєкт <span lang="en">LAB</span></h3>
+                <p>М class="project-type"аркетинг</p>
             </li>
             <li>
                 <img src="./images/growing-business.jpg" alt="робота на пк"
               width="370"
               height="294">
-                <h3>Growing Business</h3>
-                <p>Додаток</p>
+                <h3 lang="en" class="project-title">Growing Business</h3>
+                <p class="project-type">Додаток</p>
             </li>
         </ul>
     </main>
-    <footer>
-        <address>
-            <a href="">WebStudio</a>
-            <ul class="list">
-                <li>
-                    <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                        target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+<footer>
+    <address>
+        <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
+        <ul class="list">
+            <li>
+                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                    target="_blank" rel="noopener noreferrer" class="link address">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li><a href="mailto:info@devstudio.com" class="link footer-mail-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link footer-phone-link">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
+</footer>
     
 </body>
 </html>
