--- a/portfolio.html
+++ b/portfolio.html
@@ -108,10 +108,12 @@
         <ul class="list">
             <li>
                 <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                    target="_blank" rel="noopener noreferrer" class="link address">м. Київ, пр-т Лесі Українки, 26</a>
+                    target="_blank" rel="noopener noreferrer" class="link address footer-link">м. Київ, пр-т Лесі
+                    Українки, 26</a>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="link footer-mail-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link footer-phone-link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link footer-mail-link footer-link">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+380961111111" class="link footer-phone-link footer-link">+38 096 111 11 11</a></li>
         </ul>
     </address>
 </footer>
