--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="nav">
         <ul class="list">
           <li class="list-item">
-            <a href="./index.html" class="link">Студія</a>
+            <a href="./index.html" class="link current">Студія</a>
           </li>
           <li class="nav-item">
             <a href="./portfolio.html" class="link">Портфоліо</a>
