--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <a href="./index.html" class="link">Студія</a>
           </li>
           <li class="nav-item">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+            <a href="./portfolio.html" class="link current">Портфоліо</a>
           </li>
           <li class="list-item">
             <a href="" class="link">Контакти</a>
